syntax = "proto3";
package mantrachain.bridge.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "mantrachain/bridge/v1/params.proto";
import "mantrachain/bridge/v1/cw_20_contract.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/LimeChain/mantrachain/x/bridge/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mantrachain/bridge/v1/params";
  }

// Queries a Cw20Contract by index.
	rpc Cw20Contract(QueryGetCw20ContractRequest) returns (QueryGetCw20ContractResponse) {
		option (google.api.http).get = "/mantrachain/bridge/v1/cw_20_contract";
	}

  rpc Bridge(QueryGetBridgeRequest) returns (QueryGetBridgeResponse) {
		option (google.api.http).get = "/mantrachain/bridge/v1/bridge/{bridge_creator}/{bridge_id}";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetCw20ContractRequest {}

message QueryGetCw20ContractResponse {
	Cw20Contract Cw20Contract = 1 [(gogoproto.nullable) = false];
}

message QueryGetBridgeRequest {
  string bridge_creator = 1;
  string bridge_id = 2;
}

message QueryGetBridgeResponse {
  string bridge_creator = 1;
  string bridge_id = 2;
  string bridge_account = 3;
  string cw20_contract_address = 4;
  string owner = 5;
}

// this line is used by starport scaffolding # 3
